Add SubQuery model and serialise/deserialise it